--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 20px;
 }
-#productContainer{
+#productContainer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -15,8 +15,9 @@ body {
   margin-bottom: 20px;
   text-align: center;
   align-items: center;
+  cursor: pointer;
 }
 img {
   max-width: 100%;
-  height: 100px;
+  height: 150px;
 }
