--- a/style.css
+++ b/style.css
@@ -21,3 +21,10 @@ img {
   max-width: 100%;
   height: 150px;
 }
+#searchInput{
+  padding: 10px 20px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 1rem;
+}
