--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ img {
   max-width: 100%;
   height: 150px;
 }
-#searchInput{
+#searchInput, #categoryFilter{
   padding: 10px 20px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
