--- a/style.css
+++ b/style.css
@@ -21,10 +21,27 @@ img {
   max-width: 100%;
   height: 150px;
 }
-#searchInput, #categoryFilter{
+#searchInput,
+#categoryFilter {
   padding: 10px 20px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 1rem;
+}
+#pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.page-link {
+  padding: 8px 12px;
+  border-radius: 10px;
+  border: 1px solid;
+  cursor: pointer;
+}
+.current-page{
+  background-color: gray;
+  color: #fff;
 }
